@@ -36,6 +36,6 @@ This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
  Karl Moerder, Kamil Dudka, Krister Johansen, Andre Guibert de Bruet,
- Michal Marek, Eric Wong, Guenter Knauf
+ Michal Marek, Eric Wong, Guenter Knauf, Peter Sylvester
 
         Thanks! (and sorry if I forgot to mention someone)
